--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
-  "name": "24statusaccount",
-  "version": "1.0.0",
-  "description": "Description of your project",
-  "main": "index.js",
-  "scripts": {
-    "build": "your_build_command",
-    "start": "node index.js"
-  },
-  "dependencies": {
-    "@types/node": "^14.14.31",
-    "discord.js-selfbot-v13": "^1.1.0",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "node-fetch": "^2.6.1"
-  },
-  "engines": {
-    "node": "16.x"
-  }
+    "name": "24statusaccount",
+    "version": "0.1.0",
+    "description": "24statusaccount",
+    "main": "index.js",
+    "scripts": {
+        "start": "node index.js"
+    },
+    "dependencies": {
+        "@types/node": "^18.0.6",
+        "discord.js-selfbot-v13": "^2.10.1",
+        "dotenv": "^16.4.5",
+        "express": "^4.18.2",
+        "node-fetch": "^3.2.6"
+    },
+    "engines": {
+        "node": "16.x"
+    }
 }
